removed java 17 calls